// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500 text-base"
  />
</div>
`;

exports[`Label > should render a large one 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500 text-lg"
  />
</div>
`;

exports[`Label > should render a small one 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500 text-sm"
  />
</div>
`;

exports[`Label > should render as outline and neutral 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-secondary-700 border-theme-secondary-300 bg-transparent dark:border-theme-secondary-700 dark:text-theme-secondary-500 dim:border-theme-dim-700 dim:text-theme-dim-200 text-base"
  />
</div>
`;

exports[`Label > should render as outline and primary 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-600 border-theme-primary-200 bg-transparent dark:text-theme-secondary-200 dim:text-theme-dim-100 dark:border-theme-dark-700 dim:border-theme-dim-700 text-base"
  />
</div>
`;

exports[`Label > should render as solid 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 bg-theme-primary-100 text-base"
  />
</div>
`;

exports[`Label > should render as solid and danger 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-danger-500 border-theme-danger-100 bg-theme-danger-100 text-base"
  />
</div>
`;

exports[`Label > should render as solid and default 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-success-600 border-theme-success-200 bg-theme-success-200 text-base"
  />
</div>
`;

exports[`Label > should render as solid and primary 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 bg-theme-primary-100 text-base"
  />
</div>
`;

exports[`Label > should render as solid and success 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-success-600 border-theme-success-200 bg-theme-success-200 text-base"
  />
</div>
`;

exports[`Label > should render danger color 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-danger-400 border-theme-danger-100 dark:border-theme-danger-400 text-base"
  />
</div>
`;

exports[`Label > should render neutral color 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:text-theme-secondary-500 dark:bg-transparent dark:border-theme-secondary-800 dim:text-theme-dim-200 dim:bg-theme-dim-950 dim:border-theme-dim-950 text-base"
  />
</div>
`;

exports[`Label > should render primary color 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-primary-500 border-theme-primary-100 dark:border-theme-primary-500 text-base"
  />
</div>
`;

exports[`Label > should render success color 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-success-600 border-theme-success-200 dark:border-theme-success-600 dim:border-theme-success-700 dim:text-theme-success-500 text-base"
  />
</div>
`;

exports[`Label > should render warning color 1`] = `
<div>
  <div
    class="inline-block font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700 text-base"
  />
</div>
`;
